--- a/buy/templates/buy/profile.html
+++ b/buy/templates/buy/profile.html
@@ -12,9 +12,9 @@
                     <div class="col-md-4 border-right">
                         <div class="d-flex flex-column align-items-center text-center p-3 py-5">
                             {% if account.profile_image %}
-                                <img class="rounded-circle mt-5" width="150px" src="{{ account.profile_image.url }}">
+                                <img class="rounded-circle mt-5" width="150px" height="150px" src="{{ account.profile_image.url }}">
                             {% else %}
-                                <img class="rounded-circle mt-5" width="150px" src="/media/black.jpg">
+                                <img class="rounded-circle mt-5" width="150px" height="150px" src="/media/black.jpg">
                             {% endif %}
                             <div>{{ form.profile_image | as_crispy_field }}</div>
                             <span class="font-weight-bold"><b>{{ user.username }}</b></span>
