--- a/buy/templates/buy/category.html
+++ b/buy/templates/buy/category.html
@@ -10,7 +10,7 @@
         <div class="col mb-5">
             <div class="card h-100">
                 <!-- Sale badge-->
-                <div class="badge bg-{{item.get_label_display}} text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                <div class="badge bg-{{item.label}} text-white position-absolute" style="top: 0.5rem; right: 0.5rem">{{ item.get_label_display }}</div>
                 <!-- Product image-->
                 <a class="nav-link" href="{{ item.get_absolute_url }}">
                     {% if item.image %}
