--- a/buy/templates/buy/home.html
+++ b/buy/templates/buy/home.html
@@ -42,7 +42,7 @@
                 </div>
                 <!-- Product actions-->
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{{ item.add_to_cart_url }}">Add to cart</a></div>
                 </div>
             </div>
         </div>
