Adjust the success page

--- a/buy/templates/buy/success.html
+++ b/buy/templates/buy/success.html
@@ -3,9 +3,9 @@
 {% block title %}Success{% endblock %}
 
 {% block content %}
-<div class="container d-flex">
+<div class="container d-flex justify-content-center">
     <div>
-        <h1>SUCCESS</h1>
+        <h3>Thanks for your order!</h3>
     </div>
 </div>
 
