Fetch add to cart

--- a/buy/templates/buy/home.html
+++ b/buy/templates/buy/home.html
@@ -46,9 +46,12 @@
                         <button id="closeModalBtn" class="btn btn-secondary" onclick="closeModal()" >Close modal</button>
                     </div>
                 </div>
-                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" type="button" id="addToCartBtn" onclick="addToCart('{{ item.slug }}')">Add to cart</a></div>
-                </div>
+                <form method="POST" action="{% url 'add-to-cart' item.slug %}">
+                    {% csrf_token %}
+                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" type="submit" id="addToCartBtn" onclick="addToCart('{{ item.slug }}')">Add to cart</a></div>
+                    </div>
+                </form>
             </div>
         </div>
         {% endfor %}
