Update cart count

--- a/buy/templates/buy/home.html
+++ b/buy/templates/buy/home.html
@@ -40,9 +40,10 @@
                         </span>
                     </div>
                 </div>
-                <!-- Product actions-->
+                <!-- Modal Add -->
                 <div id="overlay">
                     <div id="modal">
+                        Added to your cart!
                         <button id="closeModalBtn" class="btn btn-secondary" onclick="closeModal()" >Close modal</button>
                     </div>
                 </div>
