--- a/buy/templates/buy/layout.html
+++ b/buy/templates/buy/layout.html
@@ -58,7 +58,7 @@
                             <a href="{% url 'order-summary' %}" class="d-flex align-items-center nav-link">
                                 <i class="bi-cart-fill me-1"></i>
 
-                                <span class=" ms-1 badge rounded-pill bg-danger">{{ request.user | cart_item_count }}</span>
+                                <span id="cartCount" class=" ms-1 badge rounded-pill bg-danger">{{ request.user | cart_item_count }}</span>
                             </a>
                         </button>
                         <button class="btn btn-outline-dark mx-3">
