--- a/buy/templates/buy/layout.html
+++ b/buy/templates/buy/layout.html
@@ -47,7 +47,7 @@
                             <form class="d-flex ms-5" action="{% url 'search'  %}" method="POST">
                                 {% csrf_token %}
                                 <input name="query" class="form-control mx-2" type="text">
-                                <input type="submit" class="btn btn-outline-primary" value="Search">
+                                <input type="submit" class="btn btn-outline-secondary me-2" value="Search">
                             </form>
                         </div>
                     </ul>
@@ -61,7 +61,7 @@
                             </a>
                         </button>
                         <button class="btn btn-outline-dark mx-3">
-                            <a href="{% url 'profile' request.user.username %}" class="nav-link"><i class="bi bi-person"></i></a>
+                            <a href="{% url 'profile' request.user.username %}" class="nav-link d-flex">{{ request.user.username }}<i class="bi bi-person"></i></a>
                         </button>
                         <button class="btn btn-outline-dark mx-3">
                             <a href="{% url 'account_logout' %}" class="nav-link">Logout</a>
