--- a/buy/templates/buy/profile.html
+++ b/buy/templates/buy/profile.html
@@ -5,7 +5,7 @@
 
     {% block content %}
     <div class="container">
-        <div class="container rounded bg-white mt-5 mb-5 pt-4 pb-1">
+        <div class="container rounded bg-white mt-3 mb-5 pt-4 pb-1">
             <form method="post" action="{% url 'profile' request.user.username %}" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="row">
@@ -27,7 +27,6 @@
                                 <h4 class="text-right">Profile</h4>
                             </div>
                             <div class="row mt-2">
-                                <!--<div class="col-md-6"><label class="labels">Name</label><input disabled type="text" class="form-control" placeholder="first name" value="{{ user.first_name }}"></div>-->
                                 <div class="col-md-6 ">{{ form.first_name | as_crispy_field }}</div>
                                 <div class="col-md-6">{{ form.last_name | as_crispy_field }}</div>
                             </div>
@@ -42,6 +41,7 @@
 
                         </div>
                         <input type="submit" class="btn btn-primary" value="Edit profile">
+                        <a class="btn btn-warning" href="{% url 'orders' request.user.username %}">My orders</a>
                     </div>
                 
 
